# test_guide_pytest_json

./: .gitignore  README.md  pyproject.toml  report.json  setup.py
.github/workflows/: python-publish.yml
assets/firmware/: metadata.json
pytest_json/: plugin.py
tests/: test_egg.py
tests/sub_chicken/: test_chicken.py
tests/sub_chicken/sub_rooster/: test_rooster.py
tg_pytest_json/: plugin.py  report.py
