[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_guide_pytest_json"
version = "0.0.8"
dependencies = []
authors = [{name="Tim Copeland"}]
description='A pytest plugin to generate JSON reports, with ATX support.'
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
include = ["tg_pytest_json"]

[project.entry-points."pytest11"]
tg_pytest_json = "tg_pytest_json.plugin"
